--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -6,19 +6,19 @@
 
 :root {
   /* Primary Colors */
-  --primary-red: #C60C30;
+  --primary-red: #c60c30;
   --primary-blue: #003478;
 
   /* Secondary Colors */
-  --secondary-white: #FFFFFF;
+  --secondary-white: #ffffff;
   --secondary-black: #000000;
 
   /* Accent Colors */
-  --accent-light-grey: #F2F2F2;
-  --accent-muted-grey: #D6D6D6;
+  --accent-light-grey: #f2f2f2;
+  --accent-muted-grey: #d6d6d6;
 }
 
-body{
+body {
   background-color: var(--secondary-white);
   color: var(--secondary-white);
 }
